@@ -3083,8 +3083,8 @@
       <method name="GetLabelAlign" cname="gtk_frame_get_label_align">
         <return-type type="void"/>
         <parameters>
-          <parameter type="gfloat*" name="xalign"/>
-          <parameter type="gfloat*" name="yalign"/>
+          <parameter type="gfloat*" name="xalign" pass_as="out"/>
+          <parameter type="gfloat*" name="yalign" pass_as="out"/>
         </parameters>
       </method>
       <method name="GetLabelWidget" cname="gtk_frame_get_label_widget">
@@ -9306,9 +9306,9 @@
       <method name="ClassPath" cname="gtk_widget_class_path">
         <return-type type="void"/>
         <parameters>
-          <parameter type="guint*" name="path_length"/>
-          <parameter type="gchar**" name="path"/>
-          <parameter type="gchar**" name="path_reversed"/>
+          <parameter type="guint*" name="path_length" pass_as="out"/>
+          <parameter type="gchar**" name="path" pass_as="out"/>
+          <parameter type="gchar**" name="path_reversed" pass_as="out"/>
         </parameters>
       </method>
       <method name="CreatePangoContext" cname="gtk_widget_create_pango_context">
@@ -9404,8 +9404,8 @@
       <method name="GetPointer" cname="gtk_widget_get_pointer">
         <return-type type="void"/>
         <parameters>
-          <parameter type="gint*" name="x"/>
-          <parameter type="gint*" name="y"/>
+          <parameter type="gint*" name="x" pass_as="out"/>
+          <parameter type="gint*" name="y" pass_as="out"/>
         </parameters>
       </method>
       <method name="GetSettings" cname="gtk_widget_get_settings">
@@ -9449,7 +9449,7 @@
         <return-type type="gboolean"/>
         <parameters>
           <parameter type="GdkRectangle*" name="area"/>
-          <parameter type="GdkRectangle*" name="intersection"/>
+          <parameter type="GdkRectangle*" name="intersection" pass_as="out"/>
         </parameters>
       </method>
       <method name="IsAncestor" cname="gtk_widget_is_ancestor">
@@ -9523,9 +9523,9 @@
       <method name="Path" cname="gtk_widget_path">
         <return-type type="void"/>
         <parameters>
-          <parameter type="guint*" name="path_length"/>
-          <parameter type="gchar**" name="path"/>
-          <parameter type="gchar**" name="path_reversed"/>
+          <parameter type="guint*" name="path_length" pass_as="out"/>
+          <parameter type="gchar**" name="path" pass_as="out"/>
+          <parameter type="gchar**" name="path_reversed" pass_as="out"/>
         </parameters>
       </method>
       <method name="PopColormap" cname="gtk_widget_pop_colormap" shared="true">
@@ -9767,7 +9767,7 @@
         <return-type type="void"/>
         <parameters>
           <parameter type="const-gchar*" name="property_name"/>
-          <parameter type="GValue*" name="value"/>
+          <parameter type="GValue*" name="value" pass_as="out"/>
         </parameters>
       </method>
       <method name="StyleGetValist" cname="gtk_widget_style_get_valist">
@@ -9786,8 +9786,8 @@
           <parameter type="GtkWidget*" name="dest_widget"/>
           <parameter type="gint" name="src_x"/>
           <parameter type="gint" name="src_y"/>
-          <parameter type="gint*" name="dest_x"/>
-          <parameter type="gint*" name="dest_y"/>
+          <parameter type="gint*" name="dest_x" pass_as="out"/>
+          <parameter type="gint*" name="dest_y" pass_as="out"/>
         </parameters>
       </method>
       <method name="Unmap" cname="gtk_widget_unmap">
