@@ -12,3 +12,8 @@ public int InsertText (string new_text)
 
 	return position;
 }
+
+public Entry(string initialText): this()
+{
+	Text = initialText;
+}
