@@ -3,6 +3,18 @@
 
 <!-- out parameters -->
 <rule>
+  <class name="GtkFrame">
+    <method>GetLabelAlign</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="type">gfloat*</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
   <class name="GtkTextBuffer">
     <method>GetIterAtLineOffset</method>
     <method>GetIterAtLineIndex</method>
@@ -279,7 +291,93 @@
     </attribute>
   </data>
 </rule>
-
+<rule>
+  <class name="GtkWidget">
+    <method>GetPointer</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="type">gint*</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkWidget">
+	<method>TranslateCoordinates</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="name">dest_x</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkWidget">
+	<method>TranslateCoordinates</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="name">dest_y</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkWidget">
+    <method>Path</method>
+    <method>ClassPath</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter name="type">guint*</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkWidget">
+    <method>Path</method>
+    <method>ClassPath</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter name="type">gchar**</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkWidget">
+    <method>StyleGetProperty</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="name">value</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GtkWidget">
+    <method>Intersect</method>
+  </class>
+  <data>
+    <attribute target="param">
+	  <filter level="name">intersection</filter>
+	  <name>pass_as</name>
+	  <value>out</value>
+	</attribute>
+  </data>
+</rule>
+	
 
 <!-- variable arguments -->
 <rule>
