@@ -1,3 +1,10 @@
+2003-04-02  Lee Mallabone  <gnome@fonicmonkey.net>
+
+	* gtk/Entry.custom: Add a constructor that sets the initial contents.
+	
+	* sources/Gtk.metadata:
+	* api/gtk-api.xml: Fix API 'out' parameters in 'Frame' and some in 'Widget'.
+
 2003-03-27  Lee Mallabone  <gnome@fonicmonkey.net>
 	
 	* api/gtk-api.xml, sources/Gtk.metadata, gtk/Viewport.custom:
